WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180219
jsc shell's flashHeapAccess() should not do JS work after releasing access to the heap.
https://bugs.webkit.org/show_bug.cgi?id=180219
Summary
jsc shell's flashHeapAccess() should not do JS work after releasing access to...
Mark Lam
Reported
2017-11-30 14:39:07 PST
Patch coming. <
rdar://problem/35696536
>
Attachments
proposed patch.
(2.42 KB, patch)
2017-11-30 14:47 PST
,
Mark Lam
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2017-11-30 14:47:11 PST
Created
attachment 328033
[details]
proposed patch.
Mark Lam
Comment 2
2017-11-30 14:52:34 PST
Thanks for the review. Landed in
r225352
: <
http://trac.webkit.org/r225352
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug