jsc shell's flashHeapAccess() should not do JS work after releasing access to the heap. https://bugs.webkit.org/show_bug.cgi?id=180219 <rdar://problem/35696536>

Reviewed by Filip Pizlo.

JSTests:

* stress/regress-180219.js: Added.

Source/JavaScriptCore:

* jsc.cpp:
(functionFlashHeapAccess):



Canonical link: https://commits.webkit.org/196206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225352 268f45cc-cd09-0410-ab3c-d52691b4dbfc